--- a/skyfolk/templates/account/account/password_reset.html
+++ b/skyfolk/templates/account/account/password_reset.html
@@ -7,6 +7,7 @@
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
 {% block content %}
+    <div class="wrapper">
     <h3 class="lost-password-title">{% trans "Password Reset" %}</h3>
     {% if user.is_authenticated %}
     {% include "account/account/snippets/already_logged_in.html" %}
@@ -16,10 +17,13 @@
     <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
         {% csrf_token %}
         {{ form.as_p }}
+
         <input type="submit" value="{% trans "Reset My Password" %}" />
     </form>
     <br><br>
     <p class="contacto-password">{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+    <img class="need-help" src="{{STATIC_URL}}img/help.svg" onclick="location.href='/accounts/password/contact/'" title="Necesito ayuda" alt="Necesito ayuda"/>
+    </div>
 {% endblock %}
 
 {% block extra_body %}
