--- a/skyfolk/static/css/setup.css
+++ b/skyfolk/static/css/setup.css
@@ -7,7 +7,27 @@ body {
 	font-family: 'Open Sans', sans-serif;
 }
 
-
+.wrapper {
+	position: relative;
+	margin-top: 10%;
+}
+.wrapper .need-help {
+	width: 120px;
+	height: 120px;
+	display: block;
+	position: relative;
+	margin: auto;
+	-webkit-transition: all .2s linear;
+	-moz-transition: all .2s linear;
+	trasnsition: all .2s linear;
+	border-radius: 100%;
+	padding: 5px;
+	border: 3px solid transparent;
+	cursor: pointer;
+}
+.wrapper .need-help:hover {
+	border: 3px solid #64B5F6;
+}
 .display-info-reset-password {
 	width: 100%;
 	max-height: 40px;
@@ -132,4 +152,8 @@ input[type="submit"] {
     outline: 0;
     padding: 0 2rem;
     text-transform: uppercase;
+}
+input[type="email"]:focus {
+    border-bottom: 1px solid #64B5F6 !important;
+    box-shadow: 0 1px 0 0 #64B5F6 !important;
 }
