--- a/skyfolk/static/css/buscar.css
+++ b/skyfolk/static/css/buscar.css
@@ -1,12 +1,12 @@
 @import url(http://fonts.googleapis.com/css?family=Pacifico); /* ONLY FOR LOGO */
 
 /*caja de busqueda*/
-.field>form input[type=text],
-.field>form button {
+.field > form input[type=text],
+.field > form button {
   font:1.2em 'Open Sans', sans-serif;;
 }
 
-.field>form input[type=text] {
+.field > form input[type=text] {
   float: right;
   right: 200px;
   position:relative;
@@ -34,15 +34,15 @@
   padding: 0px 20px;
   color: black;
 }
-.field>form input[type=text]:focus {
+.field > form input[type=text]:focus {
   background-color: #cccccc;
   background-position: 1%;
 }
-.field>form input[type="text"] {
+.field > form input[type="text"] {
   transition: all .3s ease-in;
 }
 
-.field>form button {
+.field > form button {
   padding: 0.6em 0.8em;
   background-color: #3E9397;
   color: white;
@@ -51,37 +51,23 @@
   font-size: 1.2em;
   height:34px;
   width:70px;
-}
-.btn{
-   cursor: pointer;
-}
+}.btn {
+  cursor: pointer; }
 
-#search-noelements{
-  margin:0 auto 0 auto;
-  width:40%;
-  text-align:center;
-  font:1.6em 'Montserrat Alternates';
-  margin-top:10px;
-
-}
-
-
+#search-noelements {
+  margin: 0 auto 0 auto;
+  width: 40%;
+  text-align: center;
+  font: 1.6em "Montserrat Alternates";
+  margin-top: 10px; }
 
 /* cf */
+.float-right {
+  float: right; }
 
-*{
-  padding: 0;
-  margin: 0;
-  font-family: 'Open Sans', sans-serif;
-  box-sizing: border-box;
-}
-.float-right{
-  float: right;
-}
-.fa{
- font-size: .8em;
-  line-height: 22px !important;
-}
+.fa {
+  font-size: 0.8em;
+  line-height: 22px !important; }
 
 .fa-comment, .fa-bell {
   float: right;
@@ -92,10 +78,10 @@
   text-decoration: none;
   margin-left: 50px;
   cursor: pointer;
-  color: rgba(44,44,44,0.854);
-}
+  color: rgba(44, 44, 44, 0.854); }
+
 .fa-bars {
-  color: rgba(44,44,44,0.854);
+  color: rgba(44, 44, 44, 0.854);
   float: left;
   display: inline-block;
   position: relative;
@@ -104,10 +90,9 @@
   list-style-type: none;
   margin-left: 50px;
   cursor: pointer;
-   transition: all .2s ease-in-out;
-  -webkit-transition: all .2s ease-in-out;
-  -moz-transition: all .2s ease-in-out;
-}
+  transition: all 0.2s ease-in-out;
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out; }
 
 .fa-bell em {
   background-color: tomato;
@@ -116,65 +101,59 @@
   border-radius: 100%;
   text-decoration: none;
   border-top-left-radius: 10px;
-  color: white;
-}
+  color: white; }
+
 .fa-comment:hover, .fa-bell:hover {
- -webkit-transform: scale(1.1);
+  -webkit-transform: scale(1.1);
   -moz-transform: scale(1.1);
   transform: scale(1.1);
-  color: #556B75;
-}
+  color: #556B75; }
+
 .fa-bars:hover {
-  opacity: 0.8;
-}
+  opacity: 0.8; }
 
 .fa-bars-rotate {
-    color: #1976d2 !important;
-}
+  color: #1976d2 !important; }
+
 .fa-bars-rotate-2 {
-  color: tomato;
-}
+  color: tomato; }
 
 @media only screen and (min-width: 641px) and (max-width: 959px) {
   .field {
-    width: 831px; }
-  }
-@media only screen and (max-width: 640px) {
-    .field {
-    width: 631px; }
-  }
+    width: 831px; } }
 @media only screen and (max-width: 640px) {
   .field {
-    width: 600px;
-  }
+    width: 631px; } }
+@media only screen and (max-width: 640px) {
+  .field {
+    width: 600px; }
+
   .fa-bell, .fa-comment {
-    right: -255px;
-  }
-}
-  #toggle {
+    right: -255px; } }
+#toggle {
   display: none;
   background-color: #fff;
   width: 250px;
   position: absolute;
   top: 40px;
   margin-right: 200px;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-weight: 100;
   height: auto;
   border-bottom-right-radius: 10px;
   color: #ccc;
   z-index: 9999;
   border-bottom: 0 none;
-  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
-}
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46); }
+
 #toggle img {
   width: 75px;
   height: 75px;
   border-radius: 3px;
   box-shadow: 0 1px 5px #1976d2;
   border: 1px solid #eee;
-  position: relative;
-}
+  position: relative; }
+
 #toggle .profilee i {
   position: relative;
   top: -30px;
@@ -183,58 +162,37 @@
   color: white;
   padding: 5px 5px;
   border-bottom-left-radius: 10px;
-  border-top-left-radius: 5px;
-}
+  border-top-left-radius: 5px; }
+
 #toggle img:hover {
   opacity: 0.6;
-  transition: all .3s ease-in;
-  -webkit-transition: all .3s ease-in;
-  -moz-transition: all .3s ease-in;
-}
+  transition: all 0.3s ease-in;
+  -webkit-transition: all 0.3s ease-in;
+  -moz-transition: all 0.3s ease-in; }
+
 #toggle li {
   font-size: 16.5px;
   margin-top: 10px;
   margin-left: 17px;
   list-style-type: none;
   padding: 10px 10px;
-  color: rgba(44,44,44,0.854);
+  color: rgba(44, 44, 44, 0.854);
   box-shadow: 0 1px 2px -2px #212121;
-  -webkit-transition: all .3s ease-in;
-  -moz-transition: all .3s ease-in;
-  transition: all .3s ease-in;
+  -webkit-transition: all 0.3s ease-in;
+  -moz-transition: all 0.3s ease-in;
+  transition: all 0.3s ease-in;
   cursor: pointer;
-  border: none;
-}
+  border: none; }
+
 #toggle li:nth-child(5) {
-  margin-top: 182px;
-}
-/*
-#toggle li:nth-child(8) {
-  color: #000;
-  display: none;
-}
-#toggle li:nth-child(9) {
-  margin-top: 20px;
-  border-top: 1px solid #1e88e5;
-  text-align: center;
-  color: #1e88e5;
-}*/
+  margin-top: 182px; }
 
 #toggle li:nth-child(n+2):hover {
   background-color: white;
-  color: #1e88e5;
-}
+  color: #1e88e5; }
+
 #toggle li:nth-child(5):hover, #toggle li:nth-child(6):hover {
-  border-right: 8px solid #1e88e5;
-}
-/*
-#toggle li:nth-child(9):hover {
-  border-right: 8px solid #1e88e5;
-  border-left: 8px solid #1e88e5;
-  border-bottom-right-radius: 5px;
-  border-bottom-left-radius: 5px;
-  color: #1e88e5;
-}*/
+  border-right: 8px solid #1e88e5; }
 
 .box-tool {
   width: 100%;
@@ -244,19 +202,16 @@
   list-style-type: none;
   position: fixed;
   top: 0px;
-  z-index: 9999;
-}
+  z-index: 9999; }
 
 /* Menu opcional para usuario */
-
-.box-tool .oldMenu  {
+.box-tool .oldMenu {
   position: relative;
   height: 30px;
   width: 40%;
   display: inline-block;
   margin-left: 30px;
-  font-weight: 100;
-}
+  font-weight: 100; }
 
 .box-tool .oldMenu li {
   display: inline-block;
@@ -269,113 +224,98 @@
   color: #424242;
   font-size: 1.4em;
   font-weight: 100;
-  font-family: 'Open Sans', sans-serif !important;
-  -webkit-transition: all .1s ease-in-out;
-  transition: all .1s ease-in-out;
-  -moz-transition: all .1s ease-in-out;
-  cursor: pointer;
-}
+  font-family: "Open Sans", sans-serif !important;
+  -webkit-transition: all 0.1s ease-in-out;
+  transition: all 0.1s ease-in-out;
+  -moz-transition: all 0.1s ease-in-out;
+  cursor: pointer; }
+
 .box-tool .oldMenu li:hover {
   color: #1e88e5;
-  border-bottom: 3px solid #1e88e5;
-}
+  border-bottom: 3px solid #1e88e5; }
+
 @media only screen and (max-width: 1200px) {
   .box-tool .oldMenu {
-    width: 40.9%;
-  }
+    width: 40.9%; }
+
   .box-tool .oldMenu li {
     font-size: 1.2em;
-    margin-left: -2px;
-    }
-    .box-tool .logotipo_skyfolk { display: none; }
-}
+    margin-left: -2px; }
 
-@media only screen and (max-width: 1005px)  {
+  .box-tool .logotipo_skyfolk {
+    display: none; } }
+@media only screen and (max-width: 1005px) {
   .box-tool .oldMenu {
-    display: none;
-    }
-}
-
+    display: none; } }
 @media only screen and (min-width: 1200px) and (max-width: 1250px) {
   .box-tool .oldMenu li {
-    margin-left: 1px;
-  }
-}
-
+    margin-left: 1px; } }
 .box-tool .oldMenu li:hover:after {
   height: 3px;
-  background-color: #1e88e5;
-}
+  background-color: #1e88e5; }
 
 .logotipo_skyfolk {
   position: fixed;
-  font-family: 'Pacifico', cursive !important;
+  font-family: "Pacifico", cursive !important;
   margin: auto;
   left: 50%;
   cursor: pointer;
   top: 10px;
   font-size: 1.7em;
-  letter-spacing: 0.2px;
-}
+  letter-spacing: 0.2px; }
+
 .logotipo_skyfolk i {
   color: #0096d7;
-  text-shadow: 1px 1px 1px #ccc;
-}
+  text-shadow: 1px 1px 1px #ccc; }
 
 .fa-bars .fa-bars-content li:nth-child(1) {
-      list-style-type: none;
-      position: absolute;
-      cursor:pointer;
-      background: none;
-      top: 0;
-      left: 50px;
-      font-size: 20px;
-  }
+  list-style-type: none;
+  position: absolute;
+  background: none;
+  top: 0;
+  left: 50px;
+  font-size: 20px; }
 
 .fa-bars .fa-bars-content li:nth-child(2) {
-      list-style-type: none;
-      position: absolute;
-      cursor:pointer;
-      left: 100px;
-      top: 0;
-      font-size: 20px;
-  }
-.fa-bars .fa-bars-content li:nth-child(3) {
-      list-style-type: none;
-      position: absolute;
-      cursor:pointer;
-      left: 150px;
-      top: 0;
-      font-size: 20px;
-}
-.fa-bars .fa-bars-content li:nth-child(4) {
-      list-style-type: none;
-      position: absolute;
-      cursor:pointer;
-      left: 200px;
-      top: 0;
-      font-size: 20px;
-}
-.fa-bars .fa-bars-content li:nth-child(5) {
-      list-style-type: none;
-      position: absolute;
-      left: 250px;
-      cursor:pointer;
-      top: 30px;
-      width: 40px;
-      height: 40px;
+  list-style-type: none;
+  position: absolute;
+  left: 100px;
+  top: 0;
+  font-size: 20px; }
 
-}
+.fa-bars .fa-bars-content li:nth-child(3) {
+  list-style-type: none;
+  position: absolute;
+  cursor: pointer;
+  left: 150px;
+  top: 0;
+  font-size: 20px; }
+
+.fa-bars .fa-bars-content li:nth-child(4) {
+  list-style-type: none;
+  position: absolute;
+  cursor: pointer;
+  left: 200px;
+  top: 0;
+  font-size: 20px; }
+
+.fa-bars .fa-bars-content li:nth-child(5) {
+  list-style-type: none;
+  position: absolute;
+  left: 250px;
+  cursor: pointer;
+  top: 30px;
+  width: 40px;
+  height: 40px; }
+
 .fa-bars .fa-bars-content li:nth-child(5) img {
-    width: 40px;
-    height:40px;
-    -webkit-border-radius: 100%;
-    -moz-border-radius: 100%;
-    border-radius: 100%;
-}
+  width: 40px;
+  height: 40px;
+  -webkit-border-radius: 100%;
+  -moz-border-radius: 100%;
+  border-radius: 100%; }
 
 /* Menu superior izquierda */
-
 .fa-bars .fa-bars-content {
   display: none;
   position: absolute;
@@ -383,16 +323,13 @@
   width: 300px;
   height: 30px;
   left: 13px;
-  background: none;
-}
+  background: none; }
 
 .fa-bars:hover .fa-bars-content {
-  display: inline-block;
-}
+  display: inline-block; }
 
 .fa-bars .fa-bars-content li:hover {
-  color: #1976d2;
-}
+  color: #1976d2; }
 
 .box-tool .logo {
   position: fixed;
@@ -400,104 +337,93 @@
   text-align: center;
   left: 50%;
   padding: 0;
-  top: -280px;
-}
+  top: -280px; }
+
 .box-tool img {
   width: 120px;
   height: 120px;
   top: 0px;
   cursor: pointer;
-  position: fixed;
-}
+  position: fixed; }
 
 @media only screen and (max-width: 640px) {
   .box-tool {
-    width: 100%;
-  }
+    width: 100%; }
+
   .logotipo_skyfolk {
-    display: none;
-  }
+    display: none; }
+
   .notificationss, .fa-comment {
-    display: none;
-  }
-  .field>form input[type=text] {
-      left: -260px;
-      margin-top: 3px;
-      width: 250px;
-  }
+    display: none; }
+
+  .field > form input[type=text] {
+    left: -260px;
+    margin-top: 3px;
+    width: 250px; }
 
   #toggle {
-    height: auto;
-  }
+    height: auto; }
+
   #toggle li {
-    margin-top: 5px;
-  }
+    margin-top: 5px; }
 
   #toggle li:nth-child(8) {
-    display: block;
-  }
+    display: block; }
 
   #toggle li:nth-child(7) {
-      display: none;
-  }
+    display: none; }
 
   #toggle li:nth-child(9) {
-    display: none;
-  }
+    display: none; }
 
   #page-wrapper {
     width: 50%;
-    margin-left: -94px;
-  }
+    margin-left: -94px; }
 
   #page-wrapper .fontawesome-bullhorn, .fontawesome-camera, .fontawesome-map-marker {
-    display: none;
-  }
-}
+    display: none; } }
+/* Buscar en el tab-amigos */
+#tab-amigos .search {
+  position: relative;
+  border: none;
+  width: 70%;
+  height: 30px;
+  margin: 10px 0 20px 15%;
+  padding-left: 20px;
+  font-family: "Open Sans", sans-serif;
+  -webkit-transition: all 0.3s linear;
+  -moz-transition: all 0.3s linear;
+  transition: all 0.3s linear;
+  background: #eeeeee url("/static/img/search-icon.png") no-repeat 95%;
+  background-size: 13px; }
 
-  /* Buscar en el tab-amigos */
-  #tab-amigos .search {
-        position: relative;
-        border: none;
-        width: 70%;
-        height: 30px;
-        margin: 10px 0 20px 15%;
-        padding-left: 20px;
-        font-family: 'Open Sans', sans-serif;
-        -webkit-transition: all .3s linear;
-        -moz-transition: all .3s linear;
-        transition: all .3s linear;
-        background: #eeeeee url("/static/img/search-icon.png") no-repeat 95%;
-        background-size: 13px;
-    }
-    #tab-amigos .search:focus {
-        background: #fefefe url('/static/img/search-icon.png') no-repeat 1%;
-        background-size: 13px;
-    }
+#tab-amigos .search:focus {
+  background: #fefefe url("/static/img/search-icon.png") no-repeat 1%;
+  background-size: 13px; }
 
-    #tab-amigos .sort {
-      position: relative;
-      display: block;
-      outline: none;
-      margin: auto;
-      text-align: center;
-      letter-spacing: 0.5px;
-      transition: all 0.2s ease-out 0s;
-      height: 36px;
-      line-height: 36px;
-      padding: 0px 2rem;
-      text-transform: uppercase;
-      text-decoration: none;
-      color: #1e88e5;
-      background-color: transparent;
-      border: medium none;
-      border-radius: 2px;
-    }
-    #tab-amigos .sort:hover {
-      background-color: #eee;
-    }
+#tab-amigos .sort {
+  position: relative;
+  display: block;
+  outline: none;
+  margin: auto;
+  text-align: center;
+  letter-spacing: 0.5px;
+  transition: all 0.2s ease-out 0s;
+  height: 36px;
+  line-height: 36px;
+  padding: 0px 2rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #1e88e5;
+  background-color: transparent;
+  border: medium none;
+  border-radius: 2px; }
+
+#tab-amigos .sort:hover {
+  background-color: #eee; }
+
 @media only screen and (min-width: 640px) and (max-width: 1080px) {
   .logotipo_skyfolk {
-    left: 200px;
-  }
-}
+    left: 200px; } }
+
+/*# sourceMappingURL=buscar.css.map */
