--- a/skyfolk/static/css/sass/login/sass/comentarios.sass
+++ b/skyfolk/static/css/sass/login/sass/comentarios.sass
@@ -436,9 +436,28 @@ span .fa-heart
   z-index: 2
   position: relative
 
+span .fa-clock-o
+  cursor: pointer
+  float: left
+  display: block
+  text-align: center
+  font-size: 2em
+  height: 100%
+  width: 70px
+  line-height: 55px
+  padding: 30px 20px
+  opacity: 1
+  z-index: 2
+  position: relative
+
 span .plus
   background: #e1f5fe
 span .plus:hover
+  background: rgba(48,164,209,0.3)
+
+span .fa-clock-o
+  background: #e1f5fe
+span .fa-clock-o:hover
   background: rgba(48,164,209,0.3)
 
 span .paper-plane
