--- a/skyfolk/templates/about/special.html
+++ b/skyfolk/templates/about/special.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 {% block title %}
-<h2 class="grey-text text-lighten-1 header">Special thanks</h2>
+<h2 class="grey-text text-lighten-1 header">Agradecimientos.</h2>
 {% endblock %}
 {% block description %}
 <p>Agradecimientos por ayudar a desplegar este proyecto.</p>
