--- a/skyfolk/static/css/about.css
+++ b/skyfolk/static/css/about.css
@@ -1,5 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans);
 @import url(http://fonts.googleapis.com/css?family=Lato);
+@import url(http://fonts.googleapis.com/css?family=Pacifico); /* ONLY FOR LOGO */
+
 
 body {
 	padding: 0;
@@ -16,12 +18,27 @@ h2 {
 
 .sk_info {
 	margin-left: 7px;
+	font-size: 1.2em;
+	color: #616161;
 }
 .tarjetas_info {
 	position: relative;
 	margin-left: 20%;
 }
-
+.logotipo_skyfolk {
+	position: fixed;
+	font-family: "Pacifico", cursive !important;
+	margin: auto;
+	left: 5%;
+	cursor: pointer;
+	top: 0px;
+	font-size: 1.7em;
+	letter-spacing: 0.2px;
+	color: #555;
+}
+.logotipo_skyfolk b {
+  color: #0096d7;
+  text-shadow: 1px 1px 1px #ccc; }
 .icon_info, .icon_info_1, .icon_info_2 {
 	position: relative;
 	top: 45px;
@@ -46,7 +63,6 @@ h2 {
 	width: 200px;
 	height: 200px;
 	margin: auto;
-	margin-top: -300px;
 	border-radius: 100%;
 	cursor: pointer;
 	border: 2px solid #eee;
@@ -62,7 +78,10 @@ h2 {
 	height: 100%;
 }
 /* Out team - About us */
-
+.meet-team {
+	color: #616161;
+	font-size: 1.2em;
+}
 .our-card-1, .our-card-2, .our-card-3 {
 	height: 300px;
 	margin-right: 20px;
@@ -74,7 +93,9 @@ h2 {
 .info-our-profile {
 	position: relative;
 	margin: auto;
-	width: 100%;
+	display: block;
+	margin-left: 8%;
+	width: 90%;
 }
 .info-our-profile .name {
 	position: relative;
