--- a/skyfolk/static/css/sass/login/sass/mensajes_privados.sass
+++ b/skyfolk/static/css/sass/login/sass/mensajes_privados.sass
@@ -48,8 +48,8 @@ body
 .compose_table
   box-sizing: auto
   position: relative
-  overflow:hidden
-  padding:10px
+  overflow: hidden
+  padding: 10px
   width: 100%
   font-size: 14px
   margin: auto
@@ -186,8 +186,8 @@ label[for="id_body"]
 
 
 .body-view .message-headers
-    border-bottom: 3px solid #1e88e5
-    padding: 10px
+  border-bottom: 3px solid #1e88e5
+  padding: 10px
 
 .body-view .message-headers dt
   color: #1e88e5
@@ -299,10 +299,10 @@ label[for="id_body"]
   font-weight: 400
 
 .card .new-message
-    position: relative
-    font-size: 1.6em
-    color: #1e88e5
-    margin-left: 20px
+  position: relative
+  font-size: 1.6em
+  color: #1e88e5
+  margin-left: 20px
 
 
 .card .replied-message
@@ -312,20 +312,20 @@ label[for="id_body"]
   margin-left: 20px
 
 /* MAS VISIBILIDAD PARA LOS PLACEHOLDER'S AL COMPONER UN MENSAJE */
-
-::-webkit-input-placeholder  /* WebKit, Blink, Edge */
-    color: #424242
-
-:-moz-placeholder  /* Mozilla Firefox 4 to 18 */
-   color: #424242
-   opacity:  1
-
-::-moz-placeholder  /* Mozilla Firefox 19+ */
-   color: #424242
-   opacity:  1
-
-:-ms-input-placeholder  /* Internet Explorer 10-11 */
-   color: 424242
+/* WebKit, Blink, Edge */
+::-webkit-input-placeholder
+  color: #424242
+/* Mozilla Firefox 4 to 18 */
+\:-moz-placeholder
+  color: #424242
+  opacity:  1
+/* Mozilla Firefox 19+ */
+::-moz-placeholder
+  color: #424242
+  opacity:  1
+/* Internet Explorer 10-11 */
+\:-ms-input-placeholder
+  color: 424242
 
 
 
@@ -367,7 +367,7 @@ label[for="id_body"]
   color: #212121
 
 .messages tbody tr:nth-child(2n+2)
-    background-color: #f5f5f5
+  background-color: #f5f5f5
 
 .messages tbody tr td
   padding-left: 50px
