--- a/skyfolk/templates/about/aboutUs.html
+++ b/skyfolk/templates/about/aboutUs.html
@@ -8,10 +8,10 @@
 </head>
 <body>
 {% block title %}
-<h2 class="grey-text text-lighten-1 header">About us</h2>
+<h2 class="grey-text text-lighten-1 header">Sobre nosotros.</h2>
 {% endblock %}
 {% block description %}
-<p>Conoce quien está detrás de este proyecto.</p>
+<p class="meet-team">Conoce quien está detrás de este proyecto.</p>
 {% endblock %}
 {% block content %}
 <div class="info-our-profile">
@@ -40,7 +40,7 @@
 
     <div class="z-depth-2 grey lighten-5 col s12 m12 l4 our-card-3">
         <div class="name">
-            <h4 class="grey-text text-lighten-1">Nestor</h4>
+            <h4 class="grey-text text-lighten-1">Néstor Pana</h4>
         </div>
             <div class="info-class">
                 <span onclick="javascript:location.href='https://www.google.es/maps/place/Barcelona/@41.39479,2.1487679,12z/data=!3m1!4b1!4m2!3m1!1s0x12a49816718e30e5:0x44b0fb3d4f47660a'"><i class="small material-icons">location_on</i><br>Barcelona (España)</span>
