--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -481,6 +481,7 @@
                         {% elif user.username == user_profile.username %} <!-- Si estamos visitando nuestro propio perfil -->
                              <li><i class="fa fa-trash"></i></li>
                         {% endif %}
+                        <li class="fa-broken-heart"><img style="width: 19px; height: 19px; margin-top: 1px;" src="{{STATIC_URL}}img/bheart.png"></li>
                         {% if item.from_publication__likes > 0 %}
                             <li ><i id="like-heart" class="fa fa-heart"> {{ item.from_publication__likes }} </i></li>
                         {% else %}
