--- a/skyfolk/templates/account/search.html
+++ b/skyfolk/templates/account/search.html
@@ -1,4 +1,5 @@
 {% extends 'account/base_search.html' %}
+{% load app_filters %}
 {% block title %} <title>Búsqueda en Skyfolk.</title> {% endblock %}
 
 
@@ -6,10 +7,14 @@
 <div class="container">
 <div class="col-lg-12 col-md-10 col-sm-12">
   {% if resultSearch|length = 0 and resultMessages|length = 0 %}
-
   <div class="col-sm-4">
   	   <div id="search-noelements">
          <h5 class="">Sin resultados :-(</h5>
+         <i class="not-query">No se obtuvo ningún resultado para:
+           {% for word in words %}
+            {{ word }}
+           {% endfor %}
+        </i>
       </div>
     </div>
 
@@ -53,9 +58,19 @@
             <h2 class="messages-search">Publicaciones</h2>
             {% for pub in resultMessages %}
             <div class="col-lg-3 col-md-5 col-sm-12 pub-search">
-              <a href="/profile/{{pub.author.user}}">{{ pub.author.user }}</a>
+              <div class="col-lg-12 col-md-12 col-sm-12 pub-bg"  style="background-image: url('{{pub.profile.backImage.url}}');">
+                {% if pub.profile.image %}
+                    <img class="profile-user-bg" src="{{pub.profile.image.url}}" onclick="location.href='/profile/{{ pub.user__username }}'">
+                {% else %}
+                    <img class="profile-user-bg" src="{{ STATIC_URL }}img/nuevo.png" onclick="location.href='/profile/{{ pub.user__username }}'">
+                {% endif %}
+              </div>
+              <div class="col-lg-12 col-md-12 col-sm-12 pub-author">
+                <a href="/profile/{{pub.author.user}}">@{{ pub.author.user }}</a>
+                <i> ({{ pub.author.user.first_name}} {{ pub.author.user.last_name }})</i>
+              </div>
                   <div class="col-lg-12 col-md-12 col-sm-12 comm">
-                    <p>{{ pub.content }}</p>
+                    <p class="pub-content">{{ pub.content }}</p>
                   </div>
             </div>
             {% endfor %}
