+ Version V1 + Corrigiendo bugs en los CSS

--- a/skyfolk/static/sass/login-signup.sass
+++ b/skyfolk/static/sass/login-signup.sass
@@ -190,13 +190,12 @@ form
 
 
 .form-3 label[for="id_remember"]
-  position: relative
   left: 35%
   font-size: 1.01121em
   font-weight: 100
   display: inline-block
-  top: 25px
-  margin-top: 15px
+  margin-top: 0px
+  position: absolute
 
 
 .form-3 input[type="text"]
@@ -246,7 +245,7 @@ form
 
 /* Muestra los mensajes de error, por ejemplo -> "Contraseña incorrecta en los forms" */
 .errorlist li
-  color: #212121
+  color: tomato
   display: inline-block
   position: relative
 
@@ -281,7 +280,7 @@ form
   & #iniciar_sesion, & #registrar
     position: relative
     margin: auto
-    margin-top: 3px
+    margin-top: -20px
     display: inline-block
 
 
