--- a/skyfolk/templates/account/search.html
+++ b/skyfolk/templates/account/search.html
@@ -17,7 +17,6 @@
         </i>
       </div>
     </div>
-
   {% else %}
   <h2 class="account-search">Cuentas</h2>
   {% for item in resultSearch %}
@@ -28,7 +27,7 @@
                 {% if item.profile.backImage %}
                 <img class="back-profile-user" src="{{ item.profile.backImage.url }}">
                    {% else %}
-                   <img class="back-profile-user" src="{{ STATIC_URL }}img/5.jpg">
+                   <img class="back-profile-user" src="{{ STATIC_URL }}img/backgrounds/5.jpg">
                 {% endif %}
                 <i class="fa fa-user fa-2x like-him">
                 </i>
@@ -36,7 +35,7 @@
                   {% if item.profile.image %}
                         <img class="profile-user-bg" src="{{ item.profile.image.url }}" onclick="location.href='/profile/{{ item.username }}'">
                     {% else %}
-                        <img class="profile-user-bg" src="{{ STATIC_URL }}img/5.jpg" onclick="location.href='/profile/{{ item.username }}'">
+                        <img class="profile-user-bg" src="{{ STATIC_URL }}img/nuevo.png" onclick="location.href='/profile/{{ item.username }}'">
                     {% endif %}
                 </div>
             </div>
@@ -52,13 +51,18 @@
 </div>
 {% endfor %}
     </div>
-        {% endif %}
+    {% endif %}
     {% if resultMessages|length = 0 %}
     {% else %}
+    <div class="col-lg-12 col-md-10 col-sm-12">
             <h2 class="messages-search">Publicaciones</h2>
             {% for pub in resultMessages %}
             <div class="col-lg-3 col-md-5 col-sm-12 pub-search">
+                {% if pub.profile.backImage %}
               <div class="col-lg-12 col-md-12 col-sm-12 pub-bg"  style="background-image: url('{{pub.profile.backImage.url}}');">
+                {% else %}
+                  <div class="col-lg-12 col-md-12 col-sm-12 pub-bg"  style="background-image: url('{{STATIC_URL}}img/backgrounds/5.jpg');">
+                {% endif %}
                 {% if pub.profile.image %}
                     <img class="profile-user-bg" src="{{pub.profile.image.url}}" onclick="location.href='/profile/{{ pub.user__username }}'">
                 {% else %}
@@ -70,9 +74,10 @@
                 <i> ({{ pub.author.user.first_name}} {{ pub.author.user.last_name }})</i>
               </div>
                   <div class="col-lg-12 col-md-12 col-sm-12 comm">
-                    <p class="pub-content">{{ pub.content }}</p>
+                    <p class="pub-content">{{ pub.content|safe }}</p>
                   </div>
             </div>
+         </div>
             {% endfor %}
     {% endif %}
 </div>
@@ -100,3 +105,4 @@
 {% endif %}
 {% endblock %}
 {% endblock %}
+</div>
