--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -4,6 +4,9 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box; }
 
+button::-moz-focus-inner {
+  border: 0; }
+
 /* IMPORTANTE PARA CONSERVAR LOS BORDES DE LA INTERFAZ */
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, menu, nav, output, ruby, section, summary, time, mark, audio, video {
   margin: 0;
@@ -2188,43 +2191,94 @@ ul.table > li {
 /* NOTIFICACIONES - CHAT MENU VERTICAL */
 .nav-vertical-and-chat {
   position: fixed;
-  right: 0;
+  right: -1.2%;
   display: none;
   top: 40px;
   background-color: rgba(189, 189, 189, 0.7);
   height: 100%;
   z-index: 9998;
   font-family: "Open Sans", sans-serif;
-  overflow: hidden; }
+  overflow: hidden;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15); }
+  .nav-vertical-and-chat .nav-vertical-controls {
+    position: absolute;
+    display: block;
+    height: 120px;
+    bottom: 0; }
+    .nav-vertical-and-chat .nav-vertical-controls .controls-notifications {
+      position: relative;
+      list-style-type: none;
+      text-align: center; }
+      .nav-vertical-and-chat .nav-vertical-controls .controls-notifications li {
+        border: medium none;
+        border-radius: 2px;
+        display: inline-block;
+        height: 36px;
+        line-height: 36px;
+        padding: 0px 2rem;
+        text-transform: uppercase;
+        text-decoration: none;
+        background-color: #1e88e5;
+        text-align: center;
+        letter-spacing: 0.5px;
+        transition: all 0.2s ease-out 0s;
+        cursor: pointer;
+        outline: none;
+        font-size: 1.3em; }
+        .nav-vertical-and-chat .nav-vertical-controls .controls-notifications li a, .nav-vertical-and-chat .nav-vertical-controls .controls-notifications li a:visited {
+          color: #fff; }
+  .nav-vertical-and-chat .notification-like {
+    height: 110px;
+    margin-top: 2%;
+    display: list-item;
+    background-color: #fff;
+    opacity: 0.5;
+    -webkit-transition: all 0.1s linear;
+    -moz-transition: all 0.1s linear;
+    transition: all 0.1s linear; }
+    .nav-vertical-and-chat .notification-like:hover {
+      opacity: 1; }
+    .nav-vertical-and-chat .notification-like .hexagon {
+      position: relative;
+      width: 50px;
+      height: 28.87px;
+      background-color: #f48fb1;
+      margin: 14.43px 0;
+      top: 25%;
+      margin-left: 5%; }
+      .nav-vertical-and-chat .notification-like .hexagon i {
+        position: absolute;
+        margin-top: 5px;
+        margin-left: 12px;
+        font-size: 2em;
+        color: #fff; }
 
-.nav-vertical-and-chat .notification-like {
-  height: 110px;
-  margin-top: 2%;
-  display: list-item;
-  background-color: #fff;
-  opacity: 0.5;
-  -webkit-transition: all 0.1s linear;
-  -moz-transition: all 0.1s linear;
-  transition: all 0.1s linear; }
-
-.nav-vertical-and-chat .notification-like:hover {
-  opacity: 1; }
-
-.nav-vertical-and-chat .notification-like .hexagon {
-  position: relative;
-  width: 50px;
-  height: 28.87px;
-  background-color: #f48fb1;
-  margin: 14.43px 0;
-  top: 25%;
-  margin-left: 5%; }
-
-.nav-vertical-and-chat .notification-like .hexagon i {
+#hover-clear-notify {
+  display: none;
   position: absolute;
-  margin-top: 5px;
-  margin-left: 12px;
-  font-size: 2em;
-  color: #fff; }
+  right: 0;
+  margin-right: 0px;
+  margin-top: 20px;
+  border-radius: 100%;
+  height: 40px;
+  width: 40px;
+  outline: none;
+  border: none;
+  background-color: tomato;
+  color: #fff;
+  font-size: 1em;
+  text-align: center;
+  cursor: pointer; }
+
+.notification-bell:hover {
+  height: 50px;
+  -webkit-transition: all 0.2s ease-in;
+  -moz-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in; }
+  .notification-bell:hover > #hover-clear-notify {
+    display: block; }
+    .notification-bell:hover > #hover-clear-notify:hover {
+      box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15); }
 
 .nav-vertical-and-chat .notification-like .hexagon:before,
 .nav-vertical-and-chat .notification-like .hexagon:after {
