--- a/skyfolk/templates/account/base-header.html
+++ b/skyfolk/templates/account/base-header.html
@@ -25,8 +25,14 @@
         <li>
           <div class="logotipo_skyfolk" onclick="location.href='/'"> <i>S</i>kyfolk</div>
         </li>
-        <li class="fa fa-bell fa-lg"><em onclick="contador()">{{n_likes}}</em></li>
-      <ul class="fa fa-bars fa-lg">
+        <div>
+        <li class="notification-bell">
+          <i class="fa fa-bell fa-lg"></i>
+          <em onclick="contador()">{{n_likes}}</em>
+          <button type="submit" id="hover-clear-notify"><i class="fa fa-trash fa-2x"></i></button> <!-- Mostrar "borrar notificaciones" al hacer hover -->
+        </li>
+
+      <li><ul class="fa fa-bars fa-lg">
             {% if user.profile.hiddenMenu == False %} <!-- Elección del usuario el menu a mostrar -->
         <li class="fa-bars-content">
           <ul>
@@ -46,11 +52,11 @@
           </ul>
         </li>
         {% endif %}
-      </ul>
+      </ul></li>
       {% if showPerfilButtons or user.username == user_profile.username %}
       <!-- BOTONES ESPACIALES PARA EL USUARIO QUE HACE LOGIN, SÓLO VISIBLE POR EL USUARIO QUE INICIA SESIÓN -->
       {% endif %}
-      <!-- Menu principal - circular -->
+      <!-- Menu principal - horizontal -->
     </ul>
     {% if user.profile.hiddenMenu == True %}
       <ul class="oldMenu">
@@ -73,6 +79,11 @@
           <button class="fa fa-check notification-show"></button>
         </div>
       </div>
+      <div class="col-lg-12 col-md-12 col-sm-12 nav-vertical-controls">
+        <ul class="controls-notifications">
+          <li class="clear-notify"><a id="clear-notify">Limpiar notificaciones</a></li>
+        </ul>
+      </div>
     </div>
       <div id="loader"></div>
     </nav>
@@ -85,8 +96,10 @@
     <script src="{{STATIC_URL}}js/jquery.shorten.1.0.js"></script>
     <script src="{{STATIC_URL}}js/jquery.textcomplete.js"></script>
     <!-- Mentions -->
+    <!--
     <script src="{{STATIC_URL}}js/mentions/bootstrap-typeahead.js"></script>
     <script src="{{STATIC_URL}}js/mentions/mention.js"></script>
+  -->
 <!-- Sweet Alert -->
 
     <link rel="stylesheet" href="{{STATIC_URL}}dist/sweetalert.css">
