--- a/skyfolk/static/css/style.css
+++ b/skyfolk/static/css/style.css
@@ -1,2 +1,8 @@
-.logged-in{background:#dcdcdc url("/static/img/index_bg.png") no-repeat center 80px}.logged-out{background:#dcdcdc url("/static/img/index_bg.png") no-repeat center 30px;background-size:90%}
+.logged-in {
+  background: gainsboro url("/static/img/index_bg.png") no-repeat center 80px; }
+
+.logged-out {
+  background: gainsboro url("/static/img/index_bg.png") no-repeat center 30px;
+  background-size: 90%; }
+
 /*# sourceMappingURL=style.css.map */
