--- a/skyfolk/static/css/timeline.css
+++ b/skyfolk/static/css/timeline.css
@@ -1,2 +1,138 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400);#section .wrapperx{position:relative;max-width:100%;float:left;left:0px;height:auto;background:0;border:0;box-shadow:0}#section .wrapperx .line li{list-style-type:none}#section .wrapperx .line{left:30px;background-color:#f5f5f5;box-shadow:0.1px 0.1px grey;width:10px;height:300px;max-height:auto;position:relative;display:block}#section .wrapperx .line .second{position:relative;min-width:350px;max-width:100%;background-color:transparent;height:auto;float:right;right:-387px;margin-bottom:70px;margin-top:10px;box-shadow:0.1px 0.1px grey}#section .wrapperx .line .second .head{background-color:#1e88e5;width:100%;height:30px;font-family:"Open Sans",sans-serif;font-size:20px;padding:0px 5px;position:absolute;color:#fff;font-weight:100}#section .wrapperx .line .second .head em{float:left;width:10px;height:10px;background-color:#1e88e5;margin-top:10px;left:-5px;position:absolute;transform:rotate(45deg);-moz-transform:rotate(45deg);-webkit-transform:rotate(45deg)}#section .wrapperx .line .head a{position:relative;top:5px;font-style:normal;text-decoration:none;color:#fff}#section .wrapperx .line .second #p{position:relative;display:inline-block;top:40px;text-align:center;font-family:"Open Sans",sans-serif;font-size:15px;font-weight:100;height:auto;width:100%;color:#000}#section .wrapperx .line #p img{width:20px;height:20px;z-index:9999}#section .wrapperx .line .second .head .fecha_{font-size:10px;float:right;position:relative;display:inline-block}#section .wrapperx .line .second .contenidoadicional{width:100%;height:auto;position:relative;top:20px;margin-top:30px;border-top:1px solid #ccc}#section .wrapperx .line .second .contenidoadicional img{width:80%;border-radius:7px;position:relative;margin:auto;left:10%;margin-top:30px}#section .wrapperx .line .second .acontecimiento{width:40px;height:40px;background-size:100%;background-repeat:no-repeat;background-position:center;background-color:#fff;border-radius:100%;border:1px solid #1e88e5;position:absolute;display:inline-block;top:-7px;right:372.5px}#section .wrapperx .line .second .controles{position:relative;display:inline-block;margin:auto;width:100%;height:40px;margin-top:10px}#section .wrapperx .line .second .controles ul{margin:auto;position:relative;width:100%;height:30px;text-align:center}#section .wrapperx .line .second .controles ul li{margin:10px;color:#ccc;display:inline-block;transition:all 0.3s linear;-webkit-transition:all 0.3s linear;-moz-transition:all 0.3s linear;cursor:pointer;padding:10px 7px}#section .wrapperx .line .second .controles ul li:nth-child(1):hover{color:tomato}#section .wrapperx .line .second .controles ul li:nth-child(2):hover{color:#fff}#section .wrapperx .line .second .controles ul li:nth-child(3):hover{color:#90bdcf}
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400);
+/* NOTA IMPORTANTE: LOS COMENTARIOS DENTRO DE LOS ESTILOS SON PARA EL TIMELINE DE ABAJO */
+#section .wrapperx {
+  position: relative;
+  max-width: 100%;
+  float: left;
+  left: 0px;
+  height: auto;
+  background: 0;
+  border: 0;
+  box-shadow: 0;
+  /* Second */ }
+  #section .wrapperx .line li {
+    list-style-type: none; }
+  #section .wrapperx .line {
+    left: 30px;
+    background-color: #f5f5f5;
+    box-shadow: 0.1px 0.1px grey;
+    width: 10px;
+    height: 300px;
+    max-height: auto;
+    position: relative;
+    display: block; }
+  #section .wrapperx .line .second {
+    position: relative;
+    min-width: 350px;
+    max-width: 100%;
+    background-color: transparent;
+    height: auto;
+    float: right;
+    right: -387px;
+    margin-bottom: 70px;
+    margin-top: 10px;
+    box-shadow: 0.1px 0.1px grey; }
+  #section .wrapperx .line .second .head {
+    background-color: #1e88e5;
+    width: 100%;
+    height: 30px;
+    font-family: "Open Sans", sans-serif;
+    font-size: 20px;
+    padding: 0px 5px;
+    position: absolute;
+    color: white;
+    font-weight: 100; }
+  #section .wrapperx .line .second .head em {
+    float: left;
+    width: 10px;
+    height: 10px;
+    background-color: #1e88e5;
+    margin-top: 10px;
+    left: -5px;
+    position: absolute;
+    transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -webkit-transform: rotate(45deg); }
+  #section .wrapperx .line .head a {
+    position: relative;
+    top: 5px;
+    font-style: normal;
+    text-decoration: none;
+    color: white; }
+  #section .wrapperx .line .second #p {
+    position: relative;
+    display: inline-block;
+    top: 40px;
+    text-align: center;
+    font-family: "Open Sans", sans-serif;
+    font-size: 15px;
+    font-weight: 100;
+    height: auto;
+    width: 100%;
+    color: #000; }
+  #section .wrapperx .line #p img {
+    width: 20px;
+    height: 20px;
+    z-index: 9999; }
+  #section .wrapperx .line .second .head .fecha_ {
+    font-size: 10px;
+    float: right;
+    position: relative;
+    display: inline-block; }
+  #section .wrapperx .line .second .contenidoadicional {
+    width: 100%;
+    height: auto;
+    position: relative;
+    top: 20px;
+    margin-top: 30px;
+    border-top: 1px solid #ccc; }
+  #section .wrapperx .line .second .contenidoadicional img {
+    width: 80%;
+    border-radius: 7px;
+    position: relative;
+    margin: auto;
+    left: 10%;
+    margin-top: 30px; }
+  #section .wrapperx .line .second .acontecimiento {
+    width: 40px;
+    height: 40px;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: #fff;
+    border-radius: 100%;
+    border: 1px solid #1e88e5;
+    position: absolute;
+    display: inline-block;
+    top: -7px;
+    right: 372.5px; }
+  #section .wrapperx .line .second .controles {
+    position: relative;
+    display: inline-block;
+    margin: auto;
+    width: 100%;
+    height: 40px;
+    margin-top: 10px; }
+  #section .wrapperx .line .second .controles ul {
+    margin: auto;
+    position: relative;
+    width: 100%;
+    height: 30px;
+    text-align: center; }
+  #section .wrapperx .line .second .controles ul li {
+    margin: 10px;
+    color: #ccc;
+    display: inline-block;
+    transition: all 0.3s linear;
+    -webkit-transition: all 0.3s linear;
+    -moz-transition: all 0.3s linear;
+    cursor: pointer;
+    padding: 10px 7px; }
+  #section .wrapperx .line .second .controles ul li:nth-child(1):hover {
+    color: tomato; }
+  #section .wrapperx .line .second .controles ul li:nth-child(2):hover {
+    color: #fff; }
+  #section .wrapperx .line .second .controles ul li:nth-child(3):hover {
+    color: #90bdcf; }
+
 /*# sourceMappingURL=timeline.css.map */
