--- a/skyfolk/static/css/welcome.css
+++ b/skyfolk/static/css/welcome.css
@@ -1,2 +1,30 @@
-body{padding:0;margin:auto;max-width:80%;height:100%;background-size:cover;background-repeat:no-repeat;background:center fixed}.card-info{margin-top:30%;text-align:center}.container .configuration{width:100%;height:auto;background-color:rgba(250,250,250,0.8);position:relative;display:block}.container .configuration .title{background-color:#fff;height:30%;color:#1e88e5;border-bottom:2px solid #1e88e5}.container .configuration .title h3{padding:15px}
+body {
+  padding: 0;
+  margin: auto;
+  max-width: 80%;
+  height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background: center fixed; }
+
+.card-info {
+  margin-top: 30%;
+  text-align: center; }
+
+.container .configuration {
+  width: 100%;
+  height: auto;
+  background-color: rgba(250, 250, 250, 0.8);
+  position: relative;
+  display: block; }
+
+.container .configuration .title {
+  background-color: #fff;
+  height: 30%;
+  color: #1e88e5;
+  border-bottom: 2px solid #1e88e5; }
+
+.container .configuration .title h3 {
+  padding: 15px; }
+
 /*# sourceMappingURL=welcome.css.map */
