--- a/skyfolk/static/sass/login-signup.sass
+++ b/skyfolk/static/sass/login-signup.sass
@@ -142,6 +142,8 @@ footer:hover
 #login label, .block-formregister label
   color: grey
   font-size: 1em
+#login label[for="id_password"]
+  top: 15px
 
 form
   position: relative
@@ -186,15 +188,14 @@ form
 #id_remember
   left: 60%
   display: inherit
-  margin-top: 5px
+  bottom: 45px
 
 
 .form-3 label[for="id_remember"]
   left: 35%
   font-size: 1.01121em
   font-weight: 100
-  display: inline-block
-  margin-top: 0px
+  bottom: 40px
   position: absolute
 
 
@@ -219,7 +220,10 @@ form
 .form-3 input[type=password]
   width: 70%
   position: relative
-  margin: auto
+  margin-left: auto
+  margin-bottom: auto
+  margin-right: auto
+  margin-top: 20px
   outline: none
   -webkit-transition: all .3s linear
   -moz-transition: all .3s linear
@@ -343,7 +347,7 @@ form
 .form-3 #iniciar_sesion
   float: left
   margin-left: 7px
-  margin-top: 55px
+  margin-top: 54px
   display: inline-block
   position: relative
 
